@@ -1,18 +1,17 @@
 Package: scriptests
 Type: Package
 Title: Transcript-based unit tests that are easy to create and maintain
-Version: 1.0-8
-Date: 2011-08-20
+Version: 1.0-9
+Date: 2012-04-11
 Author: Tony Plate
 Maintainer: Tony Plate <tplate@acm.org>
-Description: Support for using .Rt (transcript) tests
-  in the tests directory of a package.  Provides more
-  convenience and features than the standard .R/.Rout.save
-  tests.  Tests can be run under R CMD check and also
-  interactively.  Provides source.pkg() for quickly loading
-  code, DLLs, and data from a package for use in an
-  edit/compile/test development cycle.
+Description: Support for using .Rt (transcript) tests in the tests
+        directory of a package.  Provides more convenience and features
+        than the standard .R/.Rout.save tests.  Tests can be run under
+        R CMD check and also interactively.  Provides source.pkg() for
+        quickly loading code, DLLs, and data from a package for use in
+        an edit/compile/test development cycle.
 License: GPL
-Packaged: 2011-11-26 18:10:50 UTC; tap
+Packaged: 2012-04-12 00:14:35 UTC; tap
 Repository: CRAN
-Date/Publication: 2011-11-27 09:14:14
+Date/Publication: 2012-04-13 05:22:03
