@@ -1,7 +1,7 @@
-a2865b378309ad571d85e846a1f85bb7 *DESCRIPTION
+97bd57ad17e223ee0b65159dee9f0ef3 *DESCRIPTION
 f2d2181b8e5a7adf14f1ec999f63dfa7 *DevNotes.txt
 a0d7066ff65d41fd15510fb45c754814 *NAMESPACE
-c5a5be28a293ab2415a64d11bdae3fbf *NEWS
+1306202c0c878474de8039377b8a5b9c *NEWS
 eae337ab8c6e97af8149b67e484cf495 *R/Rdiff.R
 1b28e53717b30eb869b330802f8f6a1b *R/ScripDiff.R
 02ab21839ddb666eec67c83397e1a0d8 *R/checkTestOutput.R
@@ -9,16 +9,16 @@ a14af17152bcb751443341a15b99dfe1 *R/compareSingleTest.R
 03245d935cbf6d61c3eb4e687a73d5e2 *R/compareTranscriptAndOutput.R
 bbb7de6c92e85379b54e7a08e7d2ba12 *R/createRfromRt.R
 83b997c7192caba2c20ef3e14c3544cc *R/dumprout.R
-727dc2700f618c7bd3f45dde9cf4029b *R/evalCapture.R
+e8bbaae155593d62ec17e8c1a2f7f3f4 *R/evalCapture.R
 45414698c3f3411bbefedfe53f360ad8 *R/initializeTests.R
 bd1474fce04fc601d63571bf59bc97cf *R/parseTranscriptFile.R
 0bdc00f3e6f4bf77fbc2b88396dbdc0a *R/plus.R
 f71d144c2162c27a726847adda64c1e8 *R/rttests.R
 a0f982d11b22727a05d89651d748ac85 *R/runPackageTests.R
 dacd45ef618314aa6132bceab234a1aa *R/runScripTests.R
-3523e3ca8e6f38a45918bcb1c467b8ae *R/runTestsHereFast.R
-f778b59eaa100e455051e529d021a682 *R/runtests.R
-717ea7a430d8848cb512fbe6b2871132 *R/source.pkg.R
+18093e6d2789c7f397963943a2070d8e *R/runTestsHereFast.R
+73b2705b62c3dd77a3ccd1f5c3ac170f *R/runtests.R
+67ab064b85d329489de4efe93e6c3243 *R/source.pkg.R
 febd1a68bb473c6c8a1a8c2bae19c3bd *R/summarizeTests.R
 988b0dfd1c32ca9e8113df1f8159cef0 *TODO.txt
 60fc2915521af7a4088d6bcc6fd3cbf2 *doc/scriptests.Rnw
@@ -53,9 +53,9 @@ d938ff5b44dc2d586dc136e2f008a7ed *man/ScripTests-package.Rd
 a65680700028c7b0dfc6dc63e0912ba6 *man/parseTranscriptFile.Rd
 a8f6893cdb441c79175ae320b2e43ab9 *man/plus.Rd
 e8fe8c357eb30739162950724dd6f8c5 *man/runScripTests.Rd
-e83157b25cef6d96d4bc6fcb9ab72498 *man/runtests.Rd
+2f15e5bc7627cc55ebcab7fc7f77c5b7 *man/runtests.Rd
 86ee7cef9aa09d2f797c693f78200fbe *man/setup.Rd
-196920a5c5c4acbf9a39f73698702528 *man/source.pkg.Rd
+160a53516242be2b4034e48689e5323d *man/source.pkg.Rd
 8896aae5919b5d334bb6de8a5bd67c0c *tests/CONFIG
 e71427454aec17b5de90c1e662aff942 *tests/allperfect.Rt
 d7f813b56c38b0b4ee32fb1c3a807cff *tests/allperfect2.Rt
