@@ -15,7 +15,7 @@
 source.pkg(pkg.dir = getOption("scriptests.pkg.dir", "pkg"),
            pattern = ".*",
            suffix = "\\\\.R$",
-           dlls = c("no", "check", "build"),
+           dlls = c("no", "check", "build", "src"),
            pos = NA, all = FALSE,
            reset.function.envirs=TRUE,
            path=getOption("scriptests.pkg.path", default=getwd()))
