@@ -1,5 +1,9 @@
 SCRIPTESTS NEWS
 
+                CHANGES in scriptests version 1.0-9 (2012-04-11)
+    o   Use withVisible(eval(expr, envir)) instead of .Internal(eval.with.vis)
+    	because the latter is not part of the official API.
+
                 CHANGES in scriptests version 1.0-8 (2011-08-20)
     o   Minor fixes
 
